<resources>
    <string name="app_name">Aullido Plateado WolfAndDungeons</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Capitulo</string>
    <string name="nav_header_subtitle">Noombre Usuario</string>
    <string name="nav_header_desc">Nivel 0</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Aullido Plateado</string>
    <string name="map">Mapa</string>
    <string name="inventory">Inventario</string>
    <string name="stats">Estadisticas</string>
    <string name="config">Configuración</string>
    <string name="battle">Campo de Batalla</string>
    <string name="inicio">Es una mañana tranquila, como cualquier otra, en Catherria, tu tierra natal.\n
        \nLa brisa golpea levemente las hojas de los arboles, los pajaros cantan al son del silbido de los campesinos que labran sus pequeños huertos a las afueras de Bharbao, la pequeña capital portuaria de Catherria.\n
        \nCaballos galopando, guardias clavando sus lanzas en el  suelo guardando la gran muralla, mercaderes haciendo negocios con los lugareños, niños y niñas jugando y perros ladrando, son algunos de los sonidos que entran por la ventana entreabierta de tu cuarto.\n
        \nDe repente, alguien abre la puerta de tu cuarto, un encapuchado armado con espada portando el emblema de los asesinos imperiales.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
