<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/mapFragment"
            android:icon="@drawable/map"
            android:title="@string/map" />

        <item
            android:id="@+id/inventoryFragment"
            android:icon="@drawable/inventory"
            android:title="@string/inventory"/>

        <item
            android:id="@+id/configFragment"
            android:icon="@drawable/setting"
            android:title="@string/config"/>
    </group>

</menu>
