<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="Inicio"
    app:startDestination="@+id/homeFragment">


    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.aullidoplateadowad.AullidoPlateado.Game.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.example.aullidoplateadowad.AullidoPlateado.Game.GameFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_battleFragment"
            app:destination="@id/battleFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.aullidoplateadowad.AullidoPlateado.Game.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/inventoryFragment"
        android:name="com.example.aullidoplateadowad.AullidoPlateado.Game.inventoryFragment"
        android:label="@string/inventory"/>
    <fragment
        android:id="@+id/configFragment"
        android:name="com.example.aullidoplateadowad.AullidoPlateado.Game.configFragment"
        android:label="@string/config"
        tools:layout="@layout/fragment_config" />
    <fragment
        android:id="@+id/battleFragment"
        android:name="com.example.aullidoplateadowad.AullidoPlateado.Game.BattleFragment"
        android:label="@string/battle"
        tools:layout="@layout/fragment_battle" >
        <action
            android:id="@+id/action_battleFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>
</navigation>